unishop/src/app/modules/user/my-cart/my-cart.component.scss
@import '../../../scss/mixins';
.card {
    position: relative;
    display: flex;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #fff;
    background-clip: border-box;
    border: 0 solid #d9dee3;
    border-radius: 0.5rem;
    margin-top: 10px;
    font-size: 15px;
    margin-bottom: 70px ;
    padding: 30px;

    @include breakpoint-max(xs) {
      display: none;
    }

  .image {
    text-decoration: none;
    color: inherit;
    border: none;
    outline: none;
    height: 162px;
    width: 210px;
    margin: 20px 0px;
  }

  h4,
  h6 {
    font-weight: 400;
  }
}

.my-cart {
  height: auto;
  width: auto !important;
  background-color: rgb(238, 238, 241);
  margin-top: 30px;
  font-size: 15px;
  margin-bottom: 70px;
  box-shadow: 0px 10px 20px rgb(30, 25, 25);
  padding: 30px;
}

.count-input {
  display: inline-block;
  width: 100%;
  width: 170px;
}

.count-input {
  display: inline-block;
  width: 100%;
  width: 170px;
}

.input-group {
  position: relative;
  display: flex;
  flex-wrap: nowrap ;
  align-items: stretch;
  width: 100%;
}

.shopping-cart-footer {
  display: flex;
  width: 100%;
  padding: 10px 0;

  // border-top: 1px solid;
  .column {
    display: table-cell;
    padding: 5px 0;
    vertical-align: middle;

    &:last-child {
      text-align: right;

      .btn {
        margin: {
          right: 0;
          left: 15px;
        }
      }
    }
  }
}

  .btn-table-options{
    width: 200px;
    border-radius: 10px;
    margin-top: 10px;
  }

// Mobile View 

.container{
  text-align: center;
  margin: auto;
  margin-bottom: 20px;

  .btn{
    margin: auto;
    border-radius: 10px;
  }

  .btn-options{
    width: 200px;
    border-radius: 10px;
  }

  @include breakpoint-min(sm) {
    display: none;
  }
  
}

.count-input-mobile{
    display: inline-block;
    width: 100%;
    width: 170px;
}


.container-card{
  display: flex;
  margin: auto;
  text-indent: 0%;
  background-color: #f0e8e2;
  max-width: 300px;
  margin-bottom: 20px;
  margin-top: 20px;
  border-radius: 20px;

  .card-img{
    max-width: 200px;
    max-height: 200px;
    margin: auto;
    display: flex;
    margin-top: 20px;
  }
 
}

